[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tabled = "0.7.0"
dotenv = "0.15.0"
futures = "0.3.21"
thiserror = "1.0.24"
maybe-async = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
diesel = { version = "1.4.4", features = ["postgres"] }
