[package]
name = "ping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [".", "entity", "migration"]

[dependencies]
axum = "0.5.12"
rand = "0.8.5"
tabled = "0.7.0"
tower = "0.4.12"
dotenv = "0.15.0"
futures = "0.3.21"
thiserror = "1.0.24"
maybe-async = "0.2.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.19.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1.0.57"
tracing-subscriber = { version = "0.3.11", features = ["env-filter"] }
entity = { path = "entity" }
migration = { path = "migration" }

[dependencies.sea-orm]
version = "^0.8.0"
features = [
    "debug-print",
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    # "sqlx-mysql",
    # "sqlx-sqlite",
]